# boids_on_ice

./: Cargo.toml  index.css  index.html
src/: game_config.rs  main.rs
